deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reactapp
  namespace: react
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reactapp
  template:
    metadata:
      labels:
        app: reactapp
    spec:
      containers:
        - name: react-image-compressor
          image: sajademperor/react_image_compressor:18
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: dockerhub-secret
