service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reactapp-service
  namespace: react
spec:
  selector:
    app: reactapp
  ports:
    - protocol: TCP
      port: 80 
      targetPort: 80
  type: ClusterIP
